--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
-  "name": "Status",
+  "name": "Fichas",
   "version": "1.0.0",
   "manifest_version": 1,
   "icon": "/logo.png",
   "action": {
-    "title": "Status",
+    "title": "Fichas",
     "icon": "https://ericlinsg.github.io/Fichas/icone.png",
     "popover": "https://ericlinsg.github.io/Fichas/index.html",
-    "width": 400,
-    "height": 800
+    "width": 200,
+    "height": 1200
   }
 }
